--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hi</h1>
-<p>I am a website</p>
-</body>
+  <head>
+    <!-- link to main stylesheet -->
+    		<link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>  
+  <body>
+    <h1>Hi</h1>
+    <p>I am a website</p>
+  </body>
 </html>
