--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <!-- link to main stylesheet -->
     		<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>  
+        <title>Johnny Linnert</title>
+  </head>
   <body>
     <h1>Hi</h1>
     <p>I am a website</p>
+    <h2>And here are my <a href="http://www.johnnylinnert.com/notes">notes</a></h2>
   </body>
 </html>
