Made some homepage copy changes
See how it looks!

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Johnny Linnert</title>
   </head>
   <body>
-    <h1>Hi</h1>
-    <p>I am a website</p>
-    <h2>And here are my <a href="http://www.johnnylinnert.com/notes">notes</a></h2>
+    <h1>Hi, I'm Johnny.</h1>
+    <p>This is the beginnings of my personal website.</p>
+    <h2>Here's some of my <a href="http://www.johnnylinnert.com/notes">notes</a>.</h2>
   </body>
 </html>
