--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <h1>Hi, I'm Johnny.</h1>
-    <p>I'm a Digital Projects Manager working at <a href="http://aqworks.com/en/">AQ</a> in Tokyo.</p>
-    <h2>Though I'm not in the practice of writing regularly, I do occassionally jot down <a href="http://www.johnnylinnert.com/notes">notes</a>.</h2>
+    <p>
+      I'm a Project Manager working on digital products and services, as well as user research projects at <a href="http://aqworks.com/en/">AQ</a> in Tokyo.
+    </p>
+    <h2>
+      Right now on the side I'm -- slowly, but continually -- working on a <a href="https://github.com/JohnnyLinnert/busping">small iOS app</a> (written in Swift) that notifies locals when their bus is near.
+    </h2>
+    <h2>
+      Feel free to say hello via <a href="https://twitter.com/JohnnyLinnert">Twitter</a>, and if you need more than 140 characters to do so, send me a <a href="mailto:johnnylinnert@gmail.com?Subject=Hi!">mail</a>!
+    </h2>
   </body>
 </html>
