--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hi, I'm Johnny.</h1>
     <p>
-      I'm a Project Manager working on digital products and services, as well as user research projects at <a href="http://aqworks.com/en/">AQ</a> in Tokyo.
+      I'm a Project Manager working on digital products, services, and user research projects at <a href="http://aqworks.com/en/">AQ</a> in Tokyo.
     </p>
     <h2>
       Right now on the side I'm -- slowly, but continually -- working on a <a href="https://github.com/JohnnyLinnert/busping">small iOS app</a> (written in Swift) that notifies locals when their bus is near.
